# predNMD

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.yaml  download_data.py  pyproject.toml  requirements.txt  setup.py
deepnmd/: __init__.py  cli.py  config.py  pipeline.py  version.py
deepnmd/modules/: __init__.py  add_NMDannot_to_vcf.py  append_TranslationAI_scores.py  check_ptc_add_features.py  filter_vcf_by_gene.py  get_LOEUF.py  get_RF_SHAP_N-escape.py  get_phyloP.py  vcf_filterProteinCoding.py  vcf_filterProteinCoding.py.backup  vepAnnot_filter.py
model/: best_params_backup.txt  model_config.json  scaler.joblib
prednmd/: __init__.py  cli.py  config.py  pipeline.py  version.py
prednmd/modules/: __init__.py  append_TranslationAI_scores.py  check_ptc_add_features.py  filter_vcf_by_gene.py  get_phyloP.py  vcf_filterProteinCoding.py  vepAnnot_filter.py
