[build-system]
requires = ["setuptools>=45,<82", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "prednmd"
version = "1.0.0"
description = "A comprehensive pipeline for predicting Nonsense-Mediated Decay (NMD) in genetic variants"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Yaqi Su", email = "yaqisu@berkeley.edu"}
]
keywords = ["bioinformatics", "genomics", "NMD", "variant-annotation", "VCF"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "pyyaml>=5.4",
    "pysam>=0.19.0",
    "pyBigWig>=0.3.18",
    "scikit-learn>=1.0.0",
    "shap>=0.41.0",
    "biopython>=1.79",
    "setuptools<82",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.scripts]
prednmd = "prednmd.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/prednmd"
Documentation = "https://prednmd.readthedocs.io"
Repository = "https://github.com/yourusername/prednmd.git"
"Bug Tracker" = "https://github.com/yourusername/prednmd/issues"

[tool.setuptools]
packages = ["prednmd", "prednmd.modules"]

[tool.setuptools.package-data]
prednmd = ["*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
